--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 CLOUDINARY_URL=cloudinary://693958361264978:ouRfBFDF-05AFts5VNF-vExDgVI@dvhse3qgv
 MONGO_URI=mongodb://localhost:27017/tarmuz
+
+# Email Configuration for Contact Forms
+EMAIL_USER=eisam2350@gmail.com
+EMAIL_PASS=eohndxaqdddodwel
+EMAIL_TO=tarmuzcompany@gmail.com
